# littercoin

./: CONTRIBUTING.md  LICENSE  README.md  cabal.project  default.nix  littercoin.cabal  release.nix  shell.nix
.devcontainer/: devcontainer.json
app/: README.md  next.config.js  package-lock.json  package.json  tsconfig.json
app/components/: AddAda.tsx  BurnLC.tsx  LittercoinInfo.tsx  LittercoinRatio.tsx  MintLC.tsx  MintMerchantToken.tsx  MintNFT.tsx  MintOwnerToken.tsx  WalletInfo.tsx
app/contracts/: lcMint.hl  lcValidator.hl  receiptToken.hl  rewardsToken.hl  threadToken.hl
app/contracts/src/: deploy-init.js  deploy-val.js  lcValidator.hl  merchToken.hl  threadToken.hl
app/helios-app/: main.ts
app/helios-app/_site/: Overview.js  README.md  index.html  index.js  network.js  style.css  wallet.js
app/lib/: wallet.ts
app/pages/: index.tsx
app/pages/api/: getSignature.ts  lcMint.tsx  lcValidator.ts  lcValidator.tsx
app/styles/: Home.module.css  globals.css
app/utils/: generate-private-key.js
deploy/: action-validator.plutus  donation-token-name.json  donation-token-value.json  lc-datum-init.json  lc-minting-policy.hash  lc-minting-policy.plutus  lc-token-metadata.json  lc-token-name.json  lc-validator.addr  lc-validator.hash  lc-validator.plutus  lc-validator.string  merchant-minting-policy.hash  merchant-minting-policy.plutus  merchant-token-name.json  mt-minting-policy.hash  mt-minting-policy.plutus  nft-minting-policy.hash  nft-minting-policy.plutus  owner-token-name.json  owner-token-value.json  receipt-minting-policy.hash  receipt-minting-policy.plutus  receipt-token-name.json  redeemer-burn-val.json  redeemer-burn.json  redeemer-mint.json  redeemer-thread-token-mint.json  redeemer-val-mint.json  rewards-mint-redeemer-mint.json  rewards-minting-policy.hash  rewards-minting-policy.plutus  thread-token-minting-policy.hash  thread-token-minting-policy.plutus  thread-token-name.json  thread-token-value.json  tt-minting-policy.hash  tt-minting-policy.plutus
helios/deploy/: lc-minting-policy.hash  lc-minting-policy.plutus  lc-token-metadata.json  lc-validator.hash  lc-validator.plutus  redeemer-lc-mint.json  redeemer-mint.json  tt-minting-policy.hash  tt-minting-policy.plutus  tt-token-name.json
helios/scripts/: add-ada-tx.sh  burn-tx.sh  init-tx.sh  mint-owner-token.sh  mint-tx.sh
helios/scripts/preprod/: global-export-variables.sh
helios/scripts/preprod/data/: burn-tx.costs  lc-datum-init.json  lc-minting-policy.addr  lc-minting-policy.hash  lc-minting-policy.plutus  lc-validator.addr  lc-validator.hash  lc-validator.plutus  merchant-token-minting-policy.script  owner-minting.script  tt-minting-policy.hash  tt-minting-policy.plutus  tt-token-name.json
helios/src/: deploy-init.js  deploy-mint.js  deploy-val.js  deploy.js  lcValidator.cs  mintLC.cs  threadToken.cs
helios/work/: add-ada-tx-alonzo.body  add-ada-tx-alonzo.tx  admin-utxo-collateral-valid.json  admin-utxo-valid.json  admin-utxo.json  burn-tx-alonzo.body  burn-tx-alonzo.tx  lc-datum-in.json  lc-datum-out.json  lc-validator-utxo.json  owner-token-alonzo.body  owner-token-alonzo.tx  redeemer-burn.json  redeemer-mint.json  redeemer-val-burn.json  redeemer-val-mint.json
nix/: default.nix  sources.json
nix/pkgs/haskell/: haskell.nix
pab/: Main-sim.hs  Main.hs  PabContract.hs
scripts/: add-ada-tx.sh  burn-tx.sh  init-tx.sh  mint-merchant-token.sh  mint-tx.sh  test  transfer-tx.sh
scripts/cardano-cli/: add-ada-tx.sh  burn-littercoin.sh  burn-tx.sh  control-tx.sh  init-tx.sh  mint-littercoin.sh  mint-nft.sh  mint-tx.sh  transfer-funds-devnet-tx.sh
scripts/cardano-cli/devnet/: global-export-variables.sh
scripts/cardano-cli/devnet/data/: add-ada.costs  burn-littercoin.costs  lc-minting-policy.hash  lc-validator.hash  (+10 more)
scripts/cardano-cli/preprod/: global-export-variables.sh
scripts/cardano-cli/testnet/: global-export-variables.sh
scripts/mainnet/: global-export-variables.sh
scripts/mainnet/data/: lc-datum-init.json  lc-minting-policy.hash  lc-minting-policy.plutus  lc-redeemer-init.json  lc-validator.addr  lc-validator.hash  lc-validator.plutus  mt-minting-policy.hash  mt-minting-policy.plutus  redeemer-val-burn.json  rewards-mint-token-name.json  rewards-minting-policy.hash  rewards-minting-policy.plutus  tt-minting-policy.hash  tt-minting-policy.plutus
scripts/preprod/: global-export-variables.sh
scripts/preprod/data/: lc-datum-init.json  lc-mint-redeemer-burn.json  lc-minting-policy.addr  lc-minting-policy.hash  lc-minting-policy.plutus  lc-token-metadata.json  lc-validator.addr  lc-validator.hash  lc-validator.plutus  mint-tx.costs  mt-minting-policy.hash  mt-minting-policy.plutus  receipt-mint-token-name.json  receipt-minting-policy.hash  receipt-minting-policy.plutus  redeemer-val-burn.json  rewards-minting-policy.hash  rewards-minting-policy.plutus  tt-minting-policy.hash  tt-minting-policy.plutus
src/: deploy-init.js  deploy-mint.js  deploy-receipt.js  deploy-val.js  helios.js  lcMint.hl  lcValidator.cs  lcValidator.hl  merchToken.hl  mint-tx.js  mintLC.cs  mintLC.hl  receiptToken.hl  rewardsToken.hl  threadToken.cs  threadToken.hl
src/Littercoin/: Deploy.hs  Littercoin.hs  OffChain.hs  OnChain.hs  Test.hs  Types.hs  Utils.hs
testing/: add-ada-tx-issue.txt  lcValProgramIR.txt
testing/mint-issue/: cbor-notworking.helios-2022-12-22.2inputs.txt  cbor-working.cli-2022-12-22.2inputs.txt  cbor.notworking.fix.txt  cbor.notworking.helios-2022-12-22.txt  cbor.notworking.txt  cbor.test  cbor.working-cli-2022-12-22.txt  cbor.working-helios.txt  cbor.working.txt  lcMintIR.txt  lcValidatorIR.txt  mint-tx-testing-log.txt  submit-error.txt  tx-after-final.txt  tx-before-final.txt
(+38 files in other folders)
