cabal-version:      3.0
name:               littercoin
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             Your name
maintainer:         Your email

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      Littercoin.Types
      Littercoin.Utils
      Littercoin.OnChain
      Littercoin.OffChain
      --Littercoin.Deploy
    build-depends:
      base >= 4.9 && < 5,
      aeson -any,
      base16-bytestring -any,
      bytestring -any,
      cardano-api -any,
      containers -any,
      freer-extras -any,
      MissingH -any,
      playground-common -any,
      plutus-contract -any,
      plutus-core -any,
      plutus-ledger -any,
      plutus-ledger-api -any,
      plutus-ledger-constraints -any,
      plutus-tx -any,
      plutus-tx-plugin -any,
      serialise -any,
      text -any,
      lens -any,
    hs-source-dirs: src

executable littercoin-pab
  import: lang
  main-is: Main-sim.hs
  hs-source-dirs: pab
  other-modules: PabContract
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    data-default -any,
    plutus-contract -any,
    plutus-pab -any,
    littercoin -any,
    aeson -any,
    freer-simple -any,
    prettyprinter -any,
    freer-extras -any,
    plutus-ledger -any,
    openapi3 -any,
