cabal-version:      3.0
name:               littercoin
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             Your name
maintainer:         Your email

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      Littercoin.Types
      Littercoin.Littercoin
      --Littercoin.OnChain
      --Littercoin.OffChain
      --Littercoin.Deploy
    build-depends:
           aeson
         , base >= 4.9 && < 5
         , bytestring -any
         , containers -any
         , cardano-api -any
         , data-default -any
         , freer-extras -any
         , lens -any
         , openapi3 -any
         , playground-common -any
         , plutus-contract -any
         , plutus-core -any
         , plutus-ledger -any
         , plutus-ledger-api -any
         , plutus-ledger-constraints -any
         , plutus-pab -any
         , plutus-script-utils -any
         , plutus-tx-plugin -any
         , plutus-tx -any
         , text -any
         , serialise -any
    hs-source-dirs: src
